# prj_runfeeti

./: .gitignore  CHANGELOG.md  CHECKPOINT_20260402_prj_RunFeeti_handoff.md  CHECKPOINT_20260402_prj_RunFeeti_preview_contract.md  CHECKPOINT_20260402_runfeeti_routing_turtle.md  README.md  pyproject.toml  requirements.txt  run_streamlit.bat  streamlit_app.py
.cursor/rules/: pre-edit-backup-policy.mdc  python-spellroute-conventions.mdc  repository-boundary.mdc  safety-guardrails.mdc  spellroute-product-context.mdc
runfeeti/: __init__.py  __main__.py  directions.py  geocode.py  grid_start.py  gui.py  letters.py  result.py  route_options.py  routing.py  runner.py  turtle_map.py  us_address.py  web_map.py
tests/: test_core.py  test_grid_start.py  test_import_weight.py  test_internal_defaults.py  test_project_hygiene.py  test_routing_directions.py  test_runner_validation.py  test_web_map.py
tools/: rename_project_folder.ps1  verify.ps1
